<resources>
  <string name="app_name">餐饮系统</string>

  <string name="home">首页</string>
  <string name="detail">详情</string>
  <string name="discover">发现(Fragment+ViewPager嵌套)</string>
  <string name="shop">商店(Fragment嵌套)</string>
  <string name="login">登录</string>
  <string name="system">系统</string>
  <string name="swipe">侧滑返回Sample</string>
  <string name="go_swipe_back">SwipeBackActivity+Fragment</string>
  <string name="go_swipe_back_f">SwipeBackFragment</string>

  <string name="action_search">搜索</string>
  <string name="action_settings">设置</string>
  <string name="action_share">分享</string>
  <string name="recommend">推荐</string>
  <string name="hot">热门</string>
  <string name="favorite">收藏</string>

  <string name="account">帐号</string>
  <string name="password">密码</string>
  <string name="sign_in">登录</string>
  <string name="register">注册</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"
        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>

  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="image_transition">image_transition</string>
  <string name="press_again_exit">再按一次退出</string>
  <string name="send">发送</string>


  <!--选餐馆-->
  <string name="eight_mall">8号&#160;菜馆</string>
  <string name="mall_location">餐厅地址:</string>
  <string name="mall_location_detail">南京市江宁区北沿路85号常青社区101栋</string>
  <string name="mall_work_time">营业时间:</string>
  <string name="mall_work_time_detail">早10:30-晚22:00</string>
  <string name="pre_order">预约用餐</string>
  <string name="pre_order_time">用餐时间</string>
  <string name="pre_order_person_num">用餐人数</string>
  <string name="pre_order_rooms">选择包间</string>
  <string name="pre_order_food_menu">选择菜品</string>
  <string name="pre_order_confirm">确认预约</string>

  <string name="select_mall_h1">请选择您的用餐地点</string>
  <string name="select_mall_1">8号餐馆</string>
  <string name="select_mall_2">北京烤鸭馆</string>
  <!--选菜品-->
  <string name="dishes_select_menu">选择菜品</string>

  <string name="dishes_order_now">立即预约</string>
  <!--首页-->
  <string name="index">首页</string>
  <string name="discount">优惠</string>
  <string name="leave_word">留言</string>
  <string name="mine">我的</string>

  <string name="index_pre_order">预约用餐</string>
  <string name="index_new_arrival">新品尝鲜</string>
  <string name="index_env_show">门店环境</string>
  <string name="index_competitive_meal">精品套餐</string>
  <string name="index_recharge_discount">充值优惠</string>
  <string name="index_dishes_rank">美食排行榜</string>
  <string name="index_can_always_find_your_love">总能找到你爱的</string>
  <string name="index_super_value_discount_dishes">超值折扣菜</string>
  <string name="index_more_than_half_off">不止5折</string>

  <string name="index_recharge_greate_discount">充值巨优惠</string>
  <string name="index_recharge_member_1000_to_1100">会员充1000送100</string>
  <string name="index_news_list">新闻资讯</string>
  <string name="index_day_welfare">每日福利</string>
  <string name="index_give_100_rmb">100元送不停</string>

  <string name="index_hot_dishes">热门菜品</string>
  <string name="index_see_more">查看更多></string>

  <string name="index_list_dish_name">北京烤鸭</string>
  <string name="index_list_dish_desc">皮脆肉嫩，回齿留香</string>
  <string name="index_list_dish_price">￥68</string>
  <string name="index_list_dish_sold">已售12345</string>
  <string name="index_list_dish_sold_num">12345</string>
  <string name="index_list_dish_mall">门市价:￥</string>
  <string name="index_list_dish_mall_price">72</string>
  <string name="title_activity_left">Left</string>
  <string name="title_activity_right">Right</string>

  <!--订单相关-->
  <string name="order_cancel_order_time">预约时间</string>
  <string name="order_cancel_total_price">总计:</string>


  <string name="activity_leave_message_myleavebutton">我的留言本</string>
  <string name="activity_leave_message_problem">常见问题</string>
  <string name="leave_message_item_text1">问：</string>
  <string name="leave_message_item_text2">答：</string>

  <string name="title">8号餐馆</string>
  <string name="login_userphone">请输入手机号码</string>
  <string name="login_userpassword">请输入密码</string>
  <string name="login_button">登\t\t\t录</string>
  <string name="login_forgetpwd">忘记密码</string>
  <string name="login_registered">没有账号？点击注册</string>

  <string name="activity_my_message_eight">8号菜馆</string>
  <string name="activity_my_message_beijingduck">北京烤鸭馆</string>

  <string name="register_verification_code">获取验证码</string>
  <string name="register_usercode">请输入验证码</string>
  <string name="register_button">注册</string>

  <string name="retrieve_userphone">请输入注册时的手机号码</string>
  <string name="retrieve_userpassword">请输入6-16个字符的新密码</string>
  <string name="retrieve_button">确定</string>

  <string name="fragment_duck_edittext">请输入您的留言信息</string>
  <string name="fragment_duck_sendbtn">发送</string>
</resources>
