<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/denglu_beijing"
    >

  <TextView
      android:id="@+id/title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/title"
      android:textSize="25sp"
      android:textColor="@color/white"
      android:layout_above="@+id/login_layout"
      android:layout_centerHorizontal="true"
      android:layout_marginBottom="50dp"
      />

  <LinearLayout
      android:id="@+id/login_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="35dp"
      android:layout_marginRight="25dp"
      android:orientation="horizontal"
      android:layout_alignBottom="@+id/login_line1"
      android:layout_marginBottom="20dp"
      >

    <ImageView
        android:layout_gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/shouji"
        />
    <EditText
        android:id="@+id/login_userphone"
        android:hint="@string/login_userphone"
        tools:text="18251919361"
        style="@style/login_style"
        android:phoneNumber="true"
        />
  </LinearLayout>
  <View
      android:id="@+id/login_line1"
      style="@style/login_line_style"
      android:layout_above="@+id/login_layout2"
      android:layout_centerHorizontal="true"
      android:layout_marginBottom="20dp"
      />
  <LinearLayout
      android:id="@+id/login_layout2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_marginLeft="35dp"
      android:layout_marginRight="25dp"
      android:layout_alignBottom="@+id/login_line2"
      android:layout_marginBottom="20dp"
      >
    <ImageView
        android:layout_gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/mima"
        />
    <EditText
        android:id="@+id/login_userpassword"
        android:hint="@string/login_userpassword"
        tools:text="123456"
        style="@style/login_style"
        android:maxLength="16"
        android:inputType="textPassword"
        />
  </LinearLayout>
  <View
      android:id="@+id/login_line2"
      android:layout_centerInParent="true"
      style="@style/login_line_style"
      />
  <Button
      android:id="@+id/login_button"
      android:layout_below="@+id/login_line2"
      android:text="@string/login_button"
      style="@style/login_button_style"
      />
  <TextView
      android:id="@+id/login_forgetpwd"
      android:text="@string/login_forgetpwd"
      style="@style/login_textview_style"
      />
  <TextView
      android:id="@+id/login_registered"
      style="@style/login_textview_style"
      android:text="@string/login_registered"
      android:layout_alignParentRight="true"
      android:layout_marginRight="20dp"
      />
</RelativeLayout>
