<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:id="@+id/dish_rlayout"
    android:layout_height="wrap_content"
    >

  <ImageView
      android:id="@+id/dish_image"
      android:layout_marginTop="10dp"
      android:layout_marginBottom="11dp"
      android:layout_marginLeft="20dp"
      android:layout_width="60dp"
      android:layout_height="60dp"
      android:layout_marginRight="12dp"
      />
  <TextView
      android:layout_marginTop="13dp"
      android:id="@+id/dish_name"
      android:textSize="14sp"
      android:textColor="#333"
      android:layout_toRightOf="@id/dish_image"
      android:layout_width="190dp"
      android:layout_height="wrap_content"
      android:text="@string/index_list_dish_name"
      />
  <TextView
      android:layout_marginTop="5dp"
      android:id="@+id/dish_desc"
      android:layout_below="@id/dish_name"
      android:layout_toRightOf="@id/dish_image"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="12sp"
      android:textColor="#999"
      android:maxLines="1"
      android:layout_marginRight="8dp"
      android:text="@string/index_list_dish_desc"
      />
  <TextView
      android:id="@+id/dish_price"
      android:layout_marginTop="6dp"
      android:layout_marginBottom="11dp"
      android:layout_toRightOf="@id/dish_image"
      android:layout_below="@id/dish_desc"
      android:layout_width="60dp"
      android:layout_height="wrap_content"
      android:textSize="14sp"
      android:textColor="#ff6666"
      android:text="@string/index_list_dish_price"
      />
  <TextView
      android:textSize="11sp"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="11dp"
      android:id="@+id/dish_mall_title"
      android:layout_width="wrap_content"
      android:layout_toRightOf="@id/dish_price"
      android:layout_below="@id/dish_desc"
      android:layout_height="wrap_content"
      android:textColor="#999"
      android:text="@string/index_list_dish_mall"
      />
  <TextView
      android:textSize="11sp"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="11dp"
      android:id="@+id/dish_mall_price"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="#999"
      android:layout_toRightOf="@id/dish_mall_title"
      android:layout_below="@id/dish_desc"
      android:text="@string/index_list_dish_mall_price"
      />
  <View
      style="@style/line_divider_h"
      android:layout_below="@id/dish_mall_price"
      />
</RelativeLayout>