<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/select_mall"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
  <include layout="@layout/common_title"/>
  <TextView
      android:text="@string/select_mall_h1"
      android:layout_marginTop="100dp"
      android:textSize="18sp"
      style="@style/font_center_white"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      />
  <LinearLayout
      android:layout_marginTop="70dp"
      android:layout_marginLeft="48dp"
      android:layout_marginRight="48dp"
      android:layout_width="match_parent"
      android:orientation="horizontal"
      android:layout_height="wrap_content"
      >

    <TextView
        android:id="@+id/mall_1"
        android:layout_weight="1"
        android:text="@string/select_mall_1"
        android:textSize="17sp"
        android:layout_marginRight="15dp"
        android:background="@drawable/select_mall_btn_bg"
        style="@style/font_center_white"
        android:layout_width="120dp"
        android:layout_height="120dp"
        />


    <TextView
        android:layout_marginLeft="15dp"
        android:id="@+id/mall_2"
        android:layout_weight="1"
        android:text="@string/select_mall_2"
        android:textSize="17sp"
        style="@style/font_center_white"
        android:background="@drawable/select_mall_btn_bg"
        android:layout_width="120dp"
        android:layout_height="120dp"
        />

  </LinearLayout>

</LinearLayout>