<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/denglu_beijing"
    >
  <include
      android:id="@+id/title_layout"
      layout="@layout/common_title_back_grey_color"
      />

  <TextView
      android:layout_below="@id/title_layout"
      android:id="@+id/title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/title"
      android:textSize="25sp"
      android:textColor="@color/white"
      android:layout_above="@+id/register_latyout1"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="50dp"
      />

  <LinearLayout
      android:id="@+id/register_latyout1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="35dp"
      android:layout_marginRight="25dp"
      android:layout_alignRight="@+id/register_button"
      android:layout_alignEnd="@+id/register_button"
      android:layout_alignBottom="@+id/register_line1"
      android:layout_marginBottom="20dp"
      >
    <ImageView
        android:layout_gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/shouji"
        />
    <EditText
        android:id="@+id/register_userphone"
        android:hint="@string/login_userphone"
        style="@style/login_style"
        android:phoneNumber="true"
        />
  </LinearLayout>
  <View
      android:id="@+id/register_line1"
      style="@style/login_line_style"
      android:layout_above="@+id/register_layout2"
      android:layout_centerHorizontal="true"
      android:layout_marginBottom="20dp"
      />

  <LinearLayout
      android:id="@+id/register_layout2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="35dp"
      android:layout_marginRight="25dp"
      android:layout_marginBottom="20dp"
      android:layout_alignBottom="@+id/register_line2"
      >
    <ImageView
        android:layout_gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/yanzheng"
        />
    <EditText
        android:id="@+id/register_usercode"
        android:hint="@string/register_usercode"
        style="@style/login_style"
        android:layout_width="180dp"
        android:layout_weight="4"
        android:layout_toLeftOf="@+id/register_verification_code"
        android:layout_toStartOf="@+id/register_verification_code"
        />
    <View
        android:layout_width="2dp"
        android:layout_height="20dp"
        android:background="@color/lightWhite"
        android:layout_alignBottom="@+id/register_verification_code"
        android:layout_alignRight="@+id/register_usercode"
        android:layout_marginRight="5dp"
        android:layout_alignEnd="@+id/register_usercode"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_verification_code"
        android:textSize="14sp"
        android:layout_weight="1"
        android:textColor="@drawable/login_text_button"
        android:id="@+id/register_verification_code"
        android:clickable="true"
        />
  </LinearLayout>
  <View
      android:id="@+id/register_line2"
      android:layout_centerInParent="true"
      style="@style/login_line_style"
      />
  <LinearLayout
      android:id="@+id/register_layout3"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:layout_marginLeft="35dp"
      android:layout_marginRight="25dp"
      android:layout_below="@id/register_line2"
      >
    <ImageView
        android:layout_gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/mima"
        />
    <EditText
        android:id="@+id/register_userpassword"
        style="@style/login_style"
        android:hint="@string/login_userpassword"
        android:maxLength="16"
        android:inputType="textPassword"
        />
  </LinearLayout>

  <View
      android:id="@+id/register_line3"
      style="@style/login_line_style"
      android:layout_below="@id/register_layout3"
      android:layout_marginTop="20dp"
      />
  <Button
      style="@style/login_button_style"
      android:id="@+id/register_button"
      android:layout_below="@+id/register_line3"
      android:text="@string/register_button"
      />
</RelativeLayout>
